--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<html>
-<body>
-<applet code="ShapesApplet.class" width="300" height="250">
-</applet>
-</body>
-</html>
+class HelloWorld{
+public static void main(String[] args){
+System.out.println("Hello World");
+}
+}
